# chopsticks

./: .gitignore  .pre-commit-config.yaml  README.md  demo.py  full_graph.py  pyproject.toml  pyrefly.toml
policy/: minimax.py
src/chopsticks/: chopsticks_v0.py
src/chopsticks/env/: chopsticks.py  state.py
tests/: test_chopsticks_env.py  test_state.py
