[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chopsticks"
version = "0.0.1"
description = "A PettingZoo AECEnv implementation of the Chopsticks game."
readme = "README.md"
authors = [
    { name = "Abhijeet Krishnan", email = "abhijeet.krishnan@gmail.com" },
]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">= 3.12"
dependencies = [
    "pettingzoo"
]

[project.urls]
Repository = "https://github.com/AbhijeetKrishnan/chopsticks"
"Bug Tracker" = "https://github.com/AbhijeetKrishnan/chopsticks/issues"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
]

[tool.ruff]
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
pretty = true
exclude = [
    "build",
    "dist",
    "venv",
    "tests",
]
files = [
    "src/chopsticks/**/*.py",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
console_output_style = "progress"
